# gse-downloader

./: .gitignore  CHANGELOG.md  LICENSE  README.md  REVIEW_REPORT.md  SKILL.md  environment.yml  pyproject.toml  requirements.txt
.cursor/: .gitignore
.cursor/rules/: code-review.mdc
examples/: gse_list.txt
src/gse_downloader/: __init__.py  __main__.py
src/gse_downloader/archive/: __init__.py  profile.py  schema.py
src/gse_downloader/cache/: __init__.py  metadata_cache.py
src/gse_downloader/cli/: __init__.py  commands.py
src/gse_downloader/core/: __init__.py  checksum.py  downloader.py  input_schema.py  rate_limiter.py  state_manager.py
src/gse_downloader/formatter/: __init__.py  base.py  factory.py  microarray.py  rnaseq.py  series_matrix.py
src/gse_downloader/parser/: __init__.py  geo_query.py  metadata.py  omics_detector.py
src/gse_downloader/pipeline/: __init__.py  pipeline.py
src/gse_downloader/profiling/: __init__.py  profiler.py
src/gse_downloader/reporter/: __init__.py  stats.py
src/gse_downloader/utils/: __init__.py  config.py  logger.py  progress.py  rate_limiter.py
tests/: __init__.py  test_checksum.py  test_cli.py  test_formatter.py  test_geo_query.py  test_omics_detector.py  test_rate_limiter.py  test_state_manager.py  test_v110_modules.py
